add Answer sort and Example 01

--- a/.gitignore
+++ b/.gitignore
@@ -75,3 +75,22 @@ fabric.properties
 !/index/qidindex
 /index/qidindex/*
 !/index/qidindex/.gitignore
+
+!/filteredXML
+/filteredXML/*
+!/filteredXML/.gitignore
+
+!/postsXML
+/postsXML/*
+!/postsXML/.gitignore
+
+!/exampleappindex
+/exampleappindex/*
+
+!/exampleappindex/01
+/exampleappindex/01/*
+!/exampleappindex/01/.gitignore
+
+!/exampleappindex/02
+/exampleappindex/02/*
+!/exampleappindex/02/.gitignore
